--- a/home.html
+++ b/home.html
@@ -8,8 +8,9 @@
     <title>My Digital Electronics Blog</title>
 
     <!--Google Font-->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <a href="https://www.freepik.com/vectors/background"></a>
 
     <link rel="stylesheet" href="style.css" type="text/css">
